DocWorks for ecom-payment-settings - 1 change detected, but 8 issue detected changes: Service ecom-payment-settings message Order member _updatedDate has changed doc
issues:
Message OrderLineItem has an unknown property type ecom-payment-settings.CatalogReference (payment-settings-spi.js (135))
Message OrderLineItem has an unknown property type ecom-payment-settimgs.DescriptionLines (payment-settings-spi.js (135))
Message TaxSummary has an unknown property type payment-settings.TaxSummaryAmounts (payment-settings-spi.js (368))
Message AppliedDiscounts has an unknown property type ecom-payment-settings.AppliedDiscountsDiscountRule (payment-settings-spi.js (383))
Message OrderShippingInfo has an unknown property type payment-settings.DeliveryLogistics (payment-settings-spi.js (564))
Message DeliveryLogistics has an unknown property type payment-settings.PickupDetails (payment-settings-spi.js (599))
Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
oneof group appliedDiscount contains non existing property merchantRule

--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -44,8 +44,7 @@
   "properties": [],
   "operations":
     [ { "name": "getConfig",
-        "labels":
-          [ "changed" ],
+        "labels": [],
         "nameParams": [],
         "params": [],
         "ret":
@@ -90,8 +89,7 @@
           { "customLabels":
               [ { "id": "maturity-beta" } ] } },
       { "name": "getPaymentSettings",
-        "labels":
-          [ "changed" ],
+        "labels": [],
         "nameParams": [],
         "params":
           [ { "name": "options",
@@ -1099,7 +1097,7 @@
               "optional": true },
             { "name": "_updatedDate",
               "type": "string",
-              "doc": "Date and time the order was updated in [ISO-8601](https://en.wikipedia.org/wiki/ISO_8601#combined_date_and_time_representations) format.",
+              "doc": "Date and time the order was last updated in [ISO-8601](https://en.wikipedia.org/wiki/ISO_8601#combined_date_and_time_representations) format.",
               "optional": true },
             { "name": "activities",
               "type":
@@ -1226,7 +1224,8 @@
               "optional": true } ],
         "extra":
           {  },
-        "labels": [] },
+        "labels":
+          [ "changed" ] },
       { "name": "OrderLineItem",
         "locations":
           [ { "lineno": 135,
